初始化项目

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <fastjson.version>2.0.57</fastjson.version>
         <h2.version>2.3.232</h2.version>
         <mybatis.version>3.5.12</mybatis.version>
+        <idgenerator.version>1.0.6</idgenerator.version>
     </properties>
 
     <dependencies>
@@ -45,31 +46,35 @@
             <artifactId>hutool-core</artifactId>
             <version>${hutool.version}</version>
         </dependency>
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-crypto</artifactId>
-            <version>${hutool.version}</version>
-        </dependency>
         <!-- lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+        <!-- fastjson2 -->
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
+        <!-- h2数据库 -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
         </dependency>
+        <!-- mybatis-plus -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
             <version>${mybatis.version}</version>
+        </dependency>
+        <!-- 雪花ID生成器 -->
+        <dependency>
+            <groupId>com.github.yitter</groupId>
+            <artifactId>yitter-idgenerator</artifactId>
+            <version>${idgenerator.version}</version>
         </dependency>
     </dependencies>
 
