--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     # redis配置
     redis:
       database: 7
-      host: 127.0.0.1
+      host: busuanzi-redis
       port: 6379
       #连接超时时间（毫秒）
       timeout: 5000
