--- a/redis.conf
+++ b/redis.conf
@@ -1,3 +1,4 @@
+# 以下是容器内部路径，不需要修改
 dir /data/redis
 bind 0.0.0.0
 port 6379
@@ -14,10 +15,6 @@ appendfsync everysec
 save 900 1
 save 300 10
 save 60 10000
-
-# 数据库数量和默认数据库
-databases 16
-database 7
 
 # 日志级别
 loglevel notice
